tests/integration/snapshots/integration__snapshot_terminal_test__terminal_resize_narrower.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 192
expression: buf.to_string()
---
This is a long line
