tests/integration/snapshots/integration__snapshot_terminal_test__terminal_resize_shorter.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 209
expression: buf.to_string()
---
     Line2
          Line3
               Line4
