tests/integration/snapshots/integration__snapshot_terminal_test__terminal_resize_taller.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 201
expression: buf.to_string()
---
Line1
     Line2
          Line3
               Line4

Line5
