tests/integration/snapshots/integration__snapshot_terminal_test__terminal_resize_wider.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 184
expression: buf.to_string()
---
Hello
     World - extended
