tests/integration/snapshots/integration__snapshot_terminal_test__terminal_reverse_index.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 250
expression: "process(\"Line1\\nLine2\\x1b[1;1H\\x1bMNew\")"
---
New
Line1
     Line2
