tests/integration/snapshots/integration__snapshot_terminal_test__terminal_reverse_video.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 152
expression: "process(\"\\x1b[7mReversed\\x1b[27mNormal\")"
---
ReversedNormal
