tests/integration/snapshots/integration__snapshot_terminal_test__terminal_rgb_color.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 147
expression: "process(\"\\x1b[38;2;255;128;0mOrange\\x1b[0m\")"
---
Orange
