tests/integration/snapshots/integration__snapshot_terminal_test__terminal_scroll_up.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 161
expression: "process_sized(\"L1\\nL2\\nL3\\nL4\\nL5\\nL6\", 20, 5)"
---
  L2
    L3
      L4
        L5
          L6
