tests/integration/snapshots/integration__snapshot_terminal_test__terminal_simple_text.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 27
expression: "process(\"Hello, World!\")"
---
Hello, World!
