tests/integration/snapshots/integration__snapshot_terminal_test__terminal_synchronized_update_mode.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 283
expression: "process(\"\\x1b[?2026hHello\\x1b[?2026l World\")"
---
Hello World
