tests/integration/snapshots/integration__snapshot_terminal_test__terminal_text_with_carriage_return.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 37
expression: "process(\"XXXX\\rHello\")"
---
Hello
