tests/integration/snapshots/integration__snapshot_terminal_test__terminal_text_wrap_at_boundary.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 43
expression: "process(\"This is a line that is longer than forty characters wide\")"
---
This is a line that is longer than forty
 characters wide
